# vvz-simple-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  server.py  setup.py  status.sh  stop.sh
